# pdcurses

./: BUILD  BUILD.bazel  WORKSPACE
.github/: pull.yml
common/: BUILD.bazel
demos/: BUILD  BUILD.bazel  firework.c  ncurses_cfg.h  ozdemo.c  ptest.c  rain.c  testcurs.c  tui.c  tui.h  worm.c  xmas.c
dos/: pdcdos.h
os2/: pdcos2.h
pdcurses/: BUILD  BUILD.bazel  color.c  getch.c  insstr.c  keyname.c  mouse.c  refresh.c
sdl1/: pdcsdl.h  sdltest.c
sdl2/: pdcsdl.h  sdltest.c
wincon/: BUILD  BUILD.bazel
x11/: BUILD.bazel  pdcx11.h
