load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "hdrs",
    visibility = ["//:__subpackages__"],
    hdrs = glob(["*.h"]),
)

cc_library(
    name = "PDCurses",
    visibility = ["//visibility:public"],
    deps = [
        ":hdrs",
        "//pdcurses",
    ] + select({
        "@bazel_tools//src/conditions:windows": ["//wincon"],
        "@bazel_tools//src/conditions:linux_x86_64": ["//x11"],
    }),
)
